<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>jp.reflexworks</groupId>
  <artifactId>vtecxj-pdf</artifactId>
  <version>10.0.1</version>
  <packaging>jar</packaging>

  <name>vte.cx PDF</name>
  <description>vte.cx PDF</description>

  <organization>
    <name>Virtual Technology</name>
    <url>http://www.virtual-tech.net/</url>
  </organization>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <basedir>.</basedir>
    <vtecxj-core-version>10.0.1</vtecxj-core-version>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
  </properties>

  <dependencies>
    <dependency>
      <groupId>com.github.librepdf</groupId>
      <artifactId>openpdf</artifactId>
      <!--
      <version>2.4.0</version>
      -->
      <version>3.0.5</version>
    </dependency>
    <dependency>
      <groupId>org.apache.pdfbox</groupId>
      <artifactId>pdfbox</artifactId>
      <!--
      <version>2.0.36</version>
      -->
      <version>3.0.7</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcprov-jdk18on</artifactId>
      <version>1.84</version>
    </dependency>
    <dependency>
      <groupId>org.bouncycastle</groupId>
      <artifactId>bcpkix-jdk18on</artifactId>
      <version>1.84</version>
    </dependency>
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>core</artifactId>
      <version>3.5.4</version>
    </dependency>
    <dependency>
      <groupId>com.google.zxing</groupId>
      <artifactId>javase</artifactId>
      <version>3.5.4</version>
    </dependency>

    <dependency>
      <groupId>jp.reflexworks</groupId>
      <artifactId>vtecxj-core</artifactId>
      <version>${vtecxj-core-version}</version>
    </dependency>
 
  </dependencies>

</project>
